--- a/style.css
+++ b/style.css
@@ -1,4 +1,163 @@
 html, body {
-  height: 100%;
+  height: auto;
   width: 100%;
+  font-family: 'Sawarabi Gothic', sans-serif;
+  text-shadow: -.5px 0 black, 0 .5px black, .5px 0 black, 0 -.5px black;
+
+}
+
+.container {
+  width: 100%; 
+  height: 100%;
+  border: 3px solid black;
+  display: flex;
+  flex-direction: column;
+}
+
+.nav-bar {
+  position: fixed;
+  height: 8%;
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  background-color: rgba(23, 41, 45, .85);
+  margin-left: -3px;
+}
+.nav-left {
+  width: 50%;
+  height: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+  align-items: center;
+}
+
+.nav-right {
+  width: 50%;
+  height: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-end;
+  align-items: center;
+}
+
+.nav-right a {
+  padding-left: 3%;
+  padding-right: 6%;
+  color: white;
+  text-decoration: none;
+}
+
+.nav-left h2 {
+  padding-left: 5%;
+  color: white;
+  height: auto;
+  width: auto;
+}
+
+.blurb {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 400px;
+  width: 100%;
+  background-image: url('https://images.unsplash.com/photo-1437419764061-2473afe69fc2?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=da8cb196ab6108a62dc9f435ae305db2&auto=format&fit=crop&w=890&q=80');
+  background-repeat: no-repeat;
+  background-size: 100% 100%;
+}
+
+.welcome {
+  color: white;
+  display: flex;
+  flex-direction: row;
+  align-items: flex-end;
+  justify-content: center;
+  height: auto;
+  width: 100%;
+}
+.welcome h1 {
+  padding-right: 25%;
+}
+
+.name-on-header {
+  display: flex;
+  flex-direction: row;
+  color: white;
+  width: 100%;
+  height: auto;
+  justify-content: center;
+  align-items: flex-start;
+}
+
+.name-on-header h1 {
+  padding-left: 15%;
+}
+
+.about {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 98%;
+  height: 350px;
+  margin-left: 2%;
+}
+.about-heading {
+  display: flex;
+  flex-direction: row;
+  align-items: flex-start;
+  width: 100%;
+}
+
+.about-blurb {
+  height: auto;
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  align-items: flex-start;
+}
+
+.about-text {
+  width: 60%;
+  height: auto;
+}
+
+.about-img {
+  width: 40%;
+  height: auto;
+  margin-left: 30%;
+}
+
+.skills {
+  display: flex;
+  background-image: url('https://newevolutiondesigns.com/images/freebies/texture-wallpaper-preview-44.jpg');
+  background-repeat: no-repeat;
+  background-size: 100% 100%;
+  width: 100%;
+  height: auto;
+  color: rgb(138, 143, 150);
+  text-shadow: none;
+  flex-wrap: wrap;
+  padding-top: 50px;
+  padding-bottom: 60px;
+}
+
+.skills-block {
+  height: 60px;
+  width: 25%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-top: 20px;
+  margin-bottom: 20px;
+}
+.skills-text {
+  font-size: .8rem;
+  margin-top: 10px;
+  margin-bottom: 10px;
+}
+
+
+.icon {
+  font-size: 3rem;
 }
