--- a/style.css
+++ b/style.css
@@ -161,3 +161,76 @@ html, body {
 .icon {
   font-size: 3rem;
 }
+
+.projects {
+  height: 400px;
+  width: 100%;
+  border: 1px solid blue;
+}
+
+.carousel {
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+  position: relative;
+  background: rgb(231, 247, 250);
+}
+
+.prev, .next {
+  position: absolute;
+  top: 45%;
+  font-size: 3rem;
+  transition: .6 ease;
+}
+
+.prev {
+  left: 5%;
+}
+
+.next {
+  right: 5%;
+}
+
+.first {
+  background: blue;
+}
+
+.second {
+  background: red;
+}
+
+.third {
+  background: green;
+}
+.slide {
+  width: 80%;
+  height: 80%;
+  margin-left: 10%;
+  margin-right: 10%;
+  margin-top: 40px;
+}
+
+.contact {
+  height: 400px;
+  width: 100%;
+  background: black;
+}
+
+.hidden {
+  display: none;
+}
+
+.dots {
+  text-align: center;
+}
+
+.dot {
+  height: 15px;
+  width: 15px;
+  background-color: #bbb;
+  border-radius: 50%;
+  display: inline-block;
+  transition: 0.6s ease;
+  margin-top: 10px;
+  margin-left: 10px;
+}
