--- a/style.css
+++ b/style.css
@@ -184,23 +184,23 @@ html, body {
 }
 
 .prev {
-  left: 5%;
+  left: 8%;
 }
 
 .next {
-  right: 5%;
+  right: 8%;
 }
 
 .first {
-  background: blue;
+  /* background: blue; */
 }
 
 .second {
-  background: red;
+  /* background: red; */
 }
 
 .third {
-  background: green;
+  /* background: green; */
 }
 .slide {
   width: 80%;
@@ -208,6 +208,9 @@ html, body {
   margin-left: 10%;
   margin-right: 10%;
   margin-top: 40px;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
 }
 
 .contact {
@@ -233,4 +236,32 @@ html, body {
   transition: 0.6s ease;
   margin-top: 10px;
   margin-left: 10px;
+}
+
+.select-project {
+  z-index: 9999; 
+  width: 100%; 
+  height: 100%; 
+  position: fixed; 
+  top: 0; 
+  left: 0; 
+  display: flex;
+  flex-direction: column;
+  background: url('https://images.homedepot-static.com/productImages/3bb850aa-f0b8-46ea-83de-5d12b55a6146/svn/beyond-basics-wallpaper-420-87152-64_1000.jpg');
+  background-repeat: no-repeat;
+  background-size: 100% 100%;
+  align-items: center;
+  /* justify-content: space-around; */
+}
+
+.slide img {
+  height: 100%;
+  width: 70%;
+  margin-left: 15%;
+}
+
+.select-project img {
+  height: 60%;
+  width: auto;
+
 }
