--- a/style.css
+++ b/style.css
@@ -6,10 +6,14 @@ html, body {
 
 }
 
+a {
+  text-decoration: none;
+}
+
 .container {
   width: 100%; 
   height: 100%;
-  border: 3px solid black;
+  /* border: 3px solid black; */
   display: flex;
   flex-direction: column;
 }
@@ -22,6 +26,7 @@ html, body {
   flex-direction: row;
   background-color: rgba(23, 41, 45, .85);
   margin-left: -3px;
+  z-index: 9999;
 }
 .nav-left {
   width: 50%;
@@ -165,7 +170,7 @@ html, body {
 .projects {
   height: 400px;
   width: 100%;
-  border: 1px solid blue;
+  /* border: 1px solid blue; */
 }
 
 .carousel {
@@ -239,10 +244,12 @@ html, body {
 }
 
 .select-project {
-  z-index: 9999; 
+  z-index: 9998; 
   width: 100%; 
   height: 100%; 
-  position: fixed; 
+  position: fixed;
+  /* margin-left: 5%; */
+  /* margin-top: 5%;  */
   top: 0; 
   left: 0; 
   display: flex;
@@ -261,7 +268,74 @@ html, body {
 }
 
 .select-project img {
-  height: 60%;
-  width: auto;
+  height: 80%;
+  width: 80%;
+}
 
+.contact {
+  height: 350px;
+  width: 100%;
+  background: rgba(255, 200, 156, .2);
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  flex-wrap: nowrap;
+}
+
+.contact-devices {
+  height: 100%;
+  min-width: 45%;
+  margin-left: 5%;
+}
+
+.contact-devices h4 {
+  font-size: 2rem;
+}
+
+.devices div {
+  font-size: 4rem;
+  margin-bottom: 5%;
+  display: flex;
+  flex-direction: row;
+}
+
+.phone:hover, .email:hover {
+  cursor: pointer;
+}
+
+
+.contact-right {
+  height: 100%;
+  min-width: 45%;
+  margin-left: 5%;
+}
+
+.cell-text, .email-text {
+  font-size: 1.5rem;
+  margin-left: 5%;
+}
+
+footer {
+  height: 60px;
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  background-color: rgba(23, 41, 45, .85);
+  margin-left: -3px;
+  justify-content: flex-start;
+  align-items: center;
+}
+
+footer div {
+  display: flex;
+  width: 20%;
+  height: 100%;
+  justify-content: center;
+  align-items: center;
+}
+
+footer div a {
+  margin-bottom: 5%;
+  text-decoration: none;
+  color: black;
 }
