--- a/style.css
+++ b/style.css
@@ -30,6 +30,7 @@ a {
 }
 .nav-left {
   min-width: 50%;
+  max-width: 50%;
   width: 50%;
   height: 100%;
   display: flex;
@@ -43,8 +44,8 @@ a {
 }
 
 .nav-right {
+  max-width: 50%;
   min-width: 50%;
-  width: 50%;
   height: 100%;
   display: flex;
   flex-direction: row;
@@ -53,8 +54,8 @@ a {
 }
 
 .nav-right a {
-  padding-left: 3%;
-  padding-right: 6%;
+  padding-left: 2%;
+  padding-right: 2%;
   color: white;
   text-decoration: none;
 }
@@ -116,18 +117,22 @@ a {
   flex-direction: column;
   align-items: center;
   width: 98%;
-  height: 350px;
+  height: auto;
   margin-left: 2%;
+  min-height: 350px;
 }
 .about-heading {
   display: flex;
   flex-direction: row;
   align-items: flex-start;
   width: 100%;
+  height: 15%;
 }
 
 .about-blurb {
-  height: auto;
+  /* display: flex; */
+  /* justify-content: center; */
+  height: 85%;
   width: 100%;
   display: flex;
   flex-direction: row;
@@ -135,17 +140,26 @@ a {
 }
 
 .about-text {
+  min-width: 60%;
   width: 60%;
-  height: auto;
+  height: 100%;
+  max-height: 100%;
+  border: 1px solid blue;
 }
 
 .about-img {
-  width: 40%;
+  right: 10%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: auto;
   height: auto;
-  margin-left: 30%;
+  border: 1px solid red;
 }
 .about-img img {
   border-radius: 50%;
+  height: auto;
+  width: auto;
 }
 
 .skills {
@@ -211,17 +225,7 @@ a {
   right: 8%;
 }
 
-.first {
-  /* background: blue; */
-}
 
-.second {
-  /* background: red; */
-}
-
-.third {
-  /* background: green; */
-}
 .slide {
   width: 80%;
   height: 80%;
@@ -372,5 +376,5 @@ footer div {
 footer div a {
   margin-bottom: 3%;
   text-decoration: none;
-  color: black;
+  color: white;
 }
