--- a/style.css
+++ b/style.css
@@ -1,9 +1,12 @@
+/* * {
+  border: 1px solid black;
+} */
+
 html, body {
   height: auto;
   width: 100%;
   font-family: 'Sawarabi Gothic', sans-serif;
   text-shadow: -.5px 0 black, 0 .5px black, .5px 0 black, 0 -.5px black;
-
 }
 
 a {
@@ -54,6 +57,7 @@ a {
 }
 
 .nav-right a {
+  width: 15%;
   padding-left: 2%;
   padding-right: 2%;
   color: white;
@@ -92,7 +96,7 @@ a {
 }
 .welcome h1 {
   text-align: center;
-  padding-right: 25%;
+  /* padding-right: 25%; */
   min-width: 100%;
 }
 
@@ -107,7 +111,7 @@ a {
 }
 
 .name-on-header h1 {
-  padding-left: 15%;
+  /* padding-left: 15%; */
   min-width: 100%;
   text-align: center;
 }
@@ -144,7 +148,7 @@ a {
   width: 60%;
   height: 100%;
   max-height: 100%;
-  border: 1px solid blue;
+  /* border: 1px solid blue; */
 }
 
 .about-img {
@@ -154,7 +158,7 @@ a {
   justify-content: center;
   width: auto;
   height: auto;
-  border: 1px solid red;
+  /* border: 1px solid red; */
 }
 .about-img img {
   border-radius: 50%;
@@ -174,6 +178,13 @@ a {
   flex-wrap: wrap;
   padding-top: 50px;
   padding-bottom: 60px;
+}
+
+.skills h1 {
+  width: 100%;
+  text-align: center;
+  margin: 0;
+  padding: 0;
 }
 
 .skills-block {
@@ -197,7 +208,7 @@ a {
 }
 
 .projects {
-  height: 400px;
+  height: 450px;
   width: 100%;
   /* border: 1px solid blue; */
 }
@@ -208,6 +219,19 @@ a {
   overflow: hidden;
   position: relative;
   background: rgb(231, 247, 250);
+}
+
+.carousel h1 {
+  width: 100%;
+  text-align: center;
+  margin: 0;
+  padding: 0;
+}
+.carousel p {
+  width: 100%;
+  text-align: center;
+  /* margin: 0; */
+  padding: 0;
 }
 
 .prev, .next {
@@ -228,10 +252,11 @@ a {
 
 .slide {
   width: 80%;
-  height: 80%;
+  height: 70%;
   margin-left: 10%;
   margin-right: 10%;
   margin-top: 40px;
+  margin-bottom: 30px;
   display: flex;
   flex-direction: row;
   align-items: center;
@@ -300,7 +325,7 @@ a {
 }
 
 .exit-button {
-  font-size: 5rem;
+  font-size: 20px;
 }
 
 .select-project p {
