--- a/style.css
+++ b/style.css
@@ -208,7 +208,7 @@ a {
 }
 
 .projects {
-  height: 450px;
+  height: 500px;
   width: 100%;
   /* border: 1px solid blue; */
 }
@@ -224,7 +224,7 @@ a {
 .carousel h1 {
   width: 100%;
   text-align: center;
-  margin: 0;
+  margin-top: 15px;
   padding: 0;
 }
 .carousel p {
@@ -251,8 +251,8 @@ a {
 
 
 .slide {
-  width: 80%;
-  height: 70%;
+  width: auto;
+  height: 60%;
   margin-left: 10%;
   margin-right: 10%;
   margin-top: 40px;
