--- a/style.css
+++ b/style.css
@@ -57,7 +57,8 @@ a {
 }
 
 .nav-right a {
-  width: 15%;
+  min-width: 25%;
+  width: auto;
   padding-left: 2%;
   padding-right: 2%;
   color: white;
