--- a/style.css
+++ b/style.css
@@ -59,8 +59,8 @@ a {
 .nav-right a {
   min-width: 25%;
   width: auto;
-  padding-left: 2%;
-  padding-right: 2%;
+  /* padding-left: 2%; */
+  padding-right: 5%;
   color: white;
   text-decoration: none;
 }
@@ -157,14 +157,15 @@ a {
   display: flex;
   align-items: center;
   justify-content: center;
-  width: auto;
+  width: 40%;
   height: auto;
-  /* border: 1px solid red; */
 }
 .about-img img {
   border-radius: 50%;
-  height: auto;
-  width: auto;
+  height: 100%;
+  width: 100%;
+  max-height: 220px;
+  max-width: 220px
 }
 
 .skills {
