--- a/style.css
+++ b/style.css
@@ -350,7 +350,7 @@ a {
 
 .contact-devices {
   height: 100%;
-  min-width: 45%;
+  min-width: 100%;
   margin-left: 5%;
 }
 
@@ -377,8 +377,9 @@ a {
 }
 
 .cell-text, .email-text {
-  font-size: 1.5rem;
+  font-size: 1.2rem;
   margin-left: 5%;
+  width: 100%;
 }
 
 footer {
