--- a/style.css
+++ b/style.css
@@ -287,11 +287,11 @@ a {
 
 .select-project {
   z-index: 9998; 
-  width: 100%; 
-  height: 100%; 
+  width: 90%; 
+  height: auto; 
   position: fixed;
-  /* margin-left: 5%; */
-  /* margin-top: 5%;  */
+  margin-left: 5%;
+  margin-top: 5%; 
   top: 0; 
   left: 0; 
   display: flex;
@@ -300,8 +300,10 @@ a {
   background-repeat: no-repeat;
   background-size: 100% 100%;
   align-items: center;
+  /* background:rgba(128, 128, 128, 0.974); */
   padding-top: 3%;
   /* justify-content: space-around; */
+  padding-bottom: 10%;
 }
 
 .slide img {
@@ -321,10 +323,6 @@ a {
 .select-project img {
   height: auto;
   width: 60%;
-}
-
-.exit-button {
-  font-size: 20px;
 }
 
 .select-project p {
